--- a/public/assets/mockup/css/style.css
+++ b/public/assets/mockup/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap');
 :root {
   --blue: #6e9fb7;
-  --med-blue: #8dc6e2;
+  --med-blue: #b1d8ec;
   --lt-blue: #d6e5ea;
   --green: #8faa75;
   --med-gray: #666666;
@@ -15,7 +15,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   background-color: var(--lt-blue);
   font-size: 16px;
 }
@@ -46,7 +46,7 @@ ul {
   
 }
 
-.content-container {
+.nav-container {
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -66,12 +66,14 @@ ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .menu-items {
   display: flex;
   padding: 0;
   justify-content: space-between;
+  align-items: center;
 }
 
 .menu-items a {
@@ -79,10 +81,11 @@ ul {
   align-items: center;
   margin-left: 50px;
   padding-bottom: 7px;
-  font-size: 20px;
+  font-size: 28px;
   font-weight: 400;
   color: var(--lt-blue);
   border-bottom: 4px solid transparent;
+  align-items: center;
   transition: all 0.4s
 }
 
@@ -90,3 +93,95 @@ ul {
   color: var(--med-blue);
   border-bottom: 4px solid var(--green);
 }
+
+/* END OF HEADER AND NAV/MENU */
+
+/* main {
+  flex: 1;
+  padding: 2% 4%;
+} */
+
+.content-row-container {
+  display: flex;
+  width: 80%;
+  height: 100%;
+  margin: 70px auto;
+}
+
+/* ARTIST COLUMN */
+.artist-column {
+  width: 65%;
+  /* flex: 50%; */
+}
+
+.feature-artist-container {
+  display: flex;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.feature-artist-container:hover {
+  box-shadow: 0px 5px 7px rgba(110, 159, 183, 0.3);
+}
+
+.artwork-image {
+  width: 200px;
+}
+
+.artist-info {
+  padding: 25px;
+}
+
+.artist-name {
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.artist-bio {
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--med-gray);
+  padding-bottom: 14px;
+}
+
+.view-profile {
+  position: relative;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--green);
+  transition: all 0.3s;
+}
+
+.view-profile:hover {
+  color: rgba(110, 159, 183, 0.5);
+}
+
+.arrow {
+  padding-left: 5px;
+  position: absolute;
+  font-size: 11px;
+  top: 3px;
+}
+
+/* WELCOME COLUMN */
+.welcome-column {
+  width: 35%;
+  margin-left: 55px;
+  /* flex: 50%; */
+}
+
+.welcome-headline {
+  font-weight: 400;
+  font-size: 42px;
+  padding-bottom: 20px;
+}
+
+.about-us {
+  font-size: 14px;
+  line-height: 25px;
+  color: var(--med-gray);
+}
+
