--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,225 @@
-;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap');
+
+:root {
+  --blue: #6e9fb7;
+  --med-blue: #b1d8ec;
+  --lt-blue: #d6e5ea;
+  --green: #8faa75;
+  --lt-green: #dff1ce;
+  --med-gray: #666666;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+  background-color: var(--lt-blue);
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.header-container {
+  position: relative;
+  display: flex;
+  background-image: url(/public/assets/images/header-background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 145px;
+  width: 100%;
+  margin: auto;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 9999;
+  top: 0;
+  
+}
+
+.nav-container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: auto;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 5000;
+}
+
+.logo img {
+  width: 240px;
+  height: auto;
+}
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-items {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-items a {
+  position: relative;
+  display: block;
+  top: 10px;
+  align-items: center;
+  margin-left: 36px;
+  padding-bottom: 7px;
+  font-size: 25px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  color: var(--lt-blue);
+  border-bottom: 4px solid transparent;
+  align-items: center;
+  transition: all 0.4s
+}
+
+.menu-items a:hover {
+  color: var(--med-blue);
+  border-bottom: 4px solid var(--green);
+}
+/* END -- HEADER AND NAV/MENU */
+
+/* main {
+  flex: 1;
+  padding: 2% 4%;
+} */
+
+.content-row-container {
+  display: flex;
+  width: 80%;
+  height: 100%;
+  margin: 70px auto;
+}
+
+/* ARTIST COLUMN */
+.artist-column {
+  width: 65%;
+  /* flex: 50%; */
+}
+
+.feature-artist-container {
+  display: flex;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.feature-artist-container:hover {
+  box-shadow: 0px 5px 7px rgba(110, 159, 183, 0.3);
+}
+
+.artwork-image {
+  width: 200px;
+}
+
+.artist-info {
+  padding: 25px;
+}
+
+.artist-name {
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.artist-bio {
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--med-gray);
+  padding-bottom: 14px;
+}
+
+.view-profile {
+  position: relative;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--green);
+  transition: all 0.3s;
+}
+
+.view-profile:hover {
+  color: rgba(110, 159, 183, 0.5);
+}
+
+.arrow {
+  padding-left: 5px;
+  position: absolute;
+  font-size: 11px;
+  top: 3px;
+}
+/* END -- ARTIST COLUMN */
+
+/* START -- WELCOME COLUMN */
+.welcome-column {
+  width: 35%;
+  margin-left: 55px;
+  /* flex: 50%; */
+}
+
+.welcome-headline {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 42px;
+  padding-bottom: 17px;
+}
+
+.about-us {
+  font-size: 14px;
+  line-height: 25px;
+  color: var(--med-gray);
+}
+
+/* SIGN UP OPTIONS */
+.signup-options {
+  margin-top: 25px;
+  text-align: left;
+}
+
+button {
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: none;
+  color: white;
+  font-size: 16px;
+  transition: all 0.3s;
+}
+
+button:hover {
+  opacity: 70%;
+}
+
+.artist-signup {
+  background-color: var(--blue);
+  margin-right: 20px;
+}
+
+.buyer-signup {
+  background-color: var(--green);
+}
+/* END -- SIGN UP OPTIONS */
+/* END -- WELCOME COLUMN */
+
+
