--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -222,4 +222,13 @@ button:hover {
 /* END -- SIGN UP OPTIONS */
 /* END -- WELCOME COLUMN */
 
+/* FOOTER */
+footer {
+  text-align: center;
+  background-color: var(--blue);
+  padding: 15px 0;
+  font-size: 20px;
+  color: white;
+}
+
 
