--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
     {{!-- Dashboard content container --}}
     <div class="dashboard-container">
           <div class="dashboard-heading">
-          <h1 class="dashboard-title">Welcome to the Artist Showcase!</h1>
+          <h1 class="dashboard-title">Welcome to the Artist Showcase Page!</h1>
         <p class="dashboard-text">Click <span class="view-profile-dashboard">View full profile</span> to reveal the full bio of each artist.</p>
         </div>
         {{!-- This column holds the artwork thumbnail and artist info container: --}}
