--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,299 @@
-;
+/* FONTS IMPORT */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap");
+
+/* CSS VARIABLES FOR APP COLOR PALETTE */
+:root {
+  --blue: #6e9fb7;
+  --med-blue: #b1d8ec;
+  --lt-blue: #d6e5ea;
+  --green: #8faa75;
+  --lt-green: #dff1ce;
+  --med-gray: #666666;
+  --drk-gray: #212121;
+}
+
+/* CSS GLOBAL STYLES FOR APP */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 16px;
+  background: #d5e1e5; /* Old browsers */
+  background: -moz-linear-gradient(
+    -45deg,
+    #d5e1e5 10%,
+    #ebf7e1 74%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    -45deg,
+    #d5e1e5 10%,
+    #ebf7e1 74%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    135deg,
+    #d5e1e5 10%,
+    #ebf7e1 74%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d5e1e5', endColorstr='#ebf7e1',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul {
+  list-style-type: none;
+}
+
+/* ======================================= */
+
+/* START -- HEADER AND NAV/MENU */
+.header-container {
+  position: relative;
+  display: flex;
+  background-image: url(../../../images/header-background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 145px;
+  width: 100%;
+  margin: auto;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 9999;
+  top: 0;
+}
+
+.nav-container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: auto;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 5000;
+}
+
+.logo img {
+  width: 240px;
+  height: auto;
+}
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-items {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-items a {
+  position: relative;
+  display: block;
+  top: 10px;
+  align-items: center;
+  margin-left: 36px;
+  padding-bottom: 7px;
+  font-size: 25px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  color: var(--lt-blue);
+  border-bottom: 4px solid transparent;
+  align-items: center;
+  transition: all 0.4s;
+}
+
+.menu-items a:hover {
+  color: var(--med-blue);
+  border-bottom: 4px solid var(--green);
+}
+/* END -- HEADER AND NAV/MENU */
+
+/* ======================================= */
+
+/* HOMEPAGE CONTAINER HOLDING ARTIST & WELCOME CONTAINER */
+.content-row-container {
+  display: flex;
+  width: 80%;
+  height: 100%;
+  margin: 70px auto;
+}
+
+/* ======================================= */
+
+/* HOMEPAGE -- ARTIST COLUMN */
+.artist-column {
+  width: 65%;
+}
+
+.feature-artist-container {
+  display: flex;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.feature-artist-container:hover {
+  box-shadow: 0px 5px 7px rgba(110, 159, 183, 0.3);
+}
+
+.artwork-image {
+  width: 200px;
+}
+
+.artist-info {
+  padding: 25px;
+}
+
+.artist-name {
+  font-weight: 400;
+  padding-bottom: 10px;
+  color: var(--drk-gray);
+}
+
+.artist-bio {
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--med-gray);
+  padding-bottom: 14px;
+}
+
+.view-profile {
+  position: relative;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--green);
+  transition: all 0.3s;
+}
+
+.view-profile:hover {
+  color: rgba(110, 159, 183, 0.5);
+}
+
+.arrow {
+  padding-left: 5px;
+  position: absolute;
+  font-size: 11px;
+  top: 3px;
+}
+/* END -- HOMEPAGE -- ARTIST COLUMN */
+
+/* ======================================= */
+
+/* HOMEPAGE -- WELCOME COLUMN */
+.welcome-column {
+  width: 35%;
+  margin-left: 55px;
+}
+
+.welcome-headline {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 42px;
+  padding-bottom: 17px;
+  letter-spacing: -0.03rem;
+  color: var(--drk-gray);
+}
+
+.about-us {
+  font-size: 14px;
+  line-height: 25px;
+  color: var(--med-gray);
+}
+
+/* SIGN UP OPTIONS */
+.signup-options {
+  margin-top: 25px;
+  text-align: left;
+}
+
+button {
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: none;
+  color: white;
+  font-size: 16px;
+  transition: all 0.3s;
+}
+
+button:hover {
+  opacity: 70%;
+}
+
+.artist-signup {
+  background-color: var(--blue);
+  margin-right: 20px;
+}
+
+.buyer-signup {
+  background-color: var(--green);
+}
+/* END -- HOMEPAGE -- WELCOME COLUMN */
+
+/* ======================================= */
+
+/* START -- DASHBOARD STYLES */
+.dashboard-container {
+  width: 80%;
+  margin: auto;
+  padding-top: 75px;
+}
+
+.dashboard-artist-column {
+  width: 100%;
+}
+
+.dashboard-heading {
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+.dashboard-title {
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 42px;
+  padding-bottom: 17px;
+  letter-spacing: -0.05rem;
+  color: var(--drk-gray);
+}
+
+.dashboard-text {
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--blue);
+}
+
+.view-profile-dashboard {
+  color: var(--green);
+}
+/* END -- DASHBOARD STYLES */
+
+/* ======================================= */
+
+/* FOOTER */
+footer {
+  text-align: center;
+  background-color: rgba(110, 159, 183, 0.4);
+  padding: 20px 0 15px 0;
+  font-size: 18px;
+  font-weight: 400;
+  color: var(--drk-gray);
+}
+
+/* ======================================= */
