--- a/public/assets/mockup/css/style.css
+++ b/public/assets/mockup/css/style.css
@@ -1,6 +1,6 @@
 /* FONTS IMPORT */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap');
 
 /* CSS VARIABLES FOR APP COLOR PALETTE */
 :root {
@@ -21,25 +21,14 @@
 }
 
 body {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 16px;
   background: #d5e1e5; /* Old browsers */
-  background: -moz-linear-gradient(
-    -45deg,
-    #d5e1e5 10%,
-    #ebf7e1 74%
-  ); /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    -45deg,
-    #d5e1e5 10%,
-    #ebf7e1 74%
-  ); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    135deg,
-    #d5e1e5 10%,
-    #ebf7e1 74%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: -moz-linear-gradient(-45deg,  #d5e1e5 10%, #ebf7e1 74%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg,  #d5e1e5 10%,#ebf7e1 74%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg,  #d5e1e5 10%,#ebf7e1 74%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d5e1e5', endColorstr='#ebf7e1',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
 }
 
 a {
@@ -68,6 +57,7 @@ ul {
   position: sticky;
   z-index: 9999;
   top: 0;
+  
 }
 
 .nav-container {
@@ -113,7 +103,7 @@ ul {
   color: var(--lt-blue);
   border-bottom: 4px solid transparent;
   align-items: center;
-  transition: all 0.4s;
+  transition: all 0.4s
 }
 
 .menu-items a:hover {
@@ -286,6 +276,101 @@ button:hover {
 
 /* ======================================= */
 
+/* START -- SIGNUP STYLES */
+
+.signup-container {
+  margin: auto;
+  width: 80%;
+  padding-top: 50px;
+}
+
+/* form label {
+  display: block;
+  width: 100%;
+} */
+
+label {
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+  margin: 0;
+  font-size: 18px;
+  color: var(--drk-gray);
+}
+
+textarea {
+  width: 100%;
+  height: 20px;
+  min-height: 100px;
+}
+
+input {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  background-color: #deebf0;
+}
+
+.signup-form {
+  margin: auto;
+  width: 60%;
+  padding: 25px;
+}
+
+.signup-title {
+  text-align: center;
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 42px;
+  padding-bottom: 17px;
+  letter-spacing: -0.05rem;
+  color: var(--drk-gray);
+}
+
+.signup-text {
+  text-align: center;
+  font-size: 17px;
+  line-height: 25px;
+  color: var(--med-gray);
+  padding-bottom: 25px;
+}
+
+.form-container {
+  position: relative;
+  background-color: white;
+  padding: 25px;
+  border-radius: 10px;
+}
+
+.signup-or-login-container {
+  display: flex;
+}
+
+.buyer-signup-button {
+  margin: 25px 0 0 0;
+  background-color: var(--green);
+  border: 3px solid var(--green);
+}
+
+.buyer-login-button {
+  margin: 25px 0 0 25px;
+  background-color: white;
+  border: 3px solid var(--green);
+  color: var(--green);
+}
+
+.buyer-login-button:hover {
+  background-color: var(--green);
+  color: white;
+}
+
+.buyer-signup-button:hover {
+  opacity: 70%;
+}
+
+/* ======================================= */
+
 /* FOOTER */
 footer {
   text-align: center;
@@ -297,3 +382,4 @@ footer {
 }
 
 /* ======================================= */
+
