controllers models handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,6 +66,8 @@
         Thank you for visiting Art Garage!
       </footer>
     </div>
-
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
   </body>
 </html>
