--- a/views/artist-signup.handlebars
+++ b/views/artist-signup.handlebars
@@ -1,32 +1,3 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Art Garage App</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico">
-  </head>
-  <body>
-
-    <div class="wrapper">
-      <!-- HEADING START -->
-      <header class="header-container">
-        <div class="nav-container">
-          <div class="logo">
-          <a href="/"><img src="../../images/art-garage-logo.png" alt="art garage logo" class="art-garage-logo"/></a>
-          </div>
-          <nav class="menu">
-            <ul class="menu-items">
-              <li><a href="/">Home</a></li>
-              <li><a href="/artists">Artists</a></li>
-              <li><a href="/login">Login</a></li>
-              <li id="logout"><a href="/">Logout</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
-      <!-- HEADING END -->
-
       <div class="signup-container">
         <form action="/profile" enctype="multipart/form-data" method="post" class="artist-signup-form">
             <h1 class="artist-signup-title">Welcome to the Artist Signup Page!</h1>
@@ -82,7 +53,7 @@
             </div>
             <div class="signup-or-login-container">
               <button type="submit" class="artist-signup-button">Sign Up!</button>
-              <a href="/login" class="login-link"><button class="artist-login-button">Login Instead</button></a>
+              <a href="/dashboard" class="login-link"><button class="artist-login-button">Login Instead</button></a>
             </div>
             </div>
         </form>
