--- a/views/buyer-signup.handlebars
+++ b/views/buyer-signup.handlebars
@@ -1,14 +1,14 @@
       <div class="signup-container">
-          <form class="signup-form">
-            <h1 class="signup-title">Welcome to the Buyer Signup Page!</h1>
-            <p class="signup-text">Please fill out all of the required information in order to become a potential buyer.</p>
+          <form class="buyer-signup-form">
+            <h1 class="buyer-signup-title">Welcome to the Buyer Signup Page!</h1>
+            <p class="buyer-signup-text">Please fill out all of the required information in order to become a potential buyer.</p>
             <div class="form-container">
             <div>
               <label for="buyer-signup-username">Username</label>
               <input type="text" id="buyer-signup-username" />
             </div>
             <div>
-              <label for="email-signup" class="email-signup">Email</label>
+              <label for="email-signup" class="email-signup">Email Address</label>
               <input type="text" id="email-signup" />
             </div>
             <div>
@@ -17,7 +17,7 @@
             </div>
             <div class="signup-or-login-container">
               <button type="submit" class="buyer-signup-button">Sign Up!</button>
-              <a href="/login" class="login-link"><button class="buyer-login-button">Login Instead</button></a>
+              <a href="/dashboard" class="login-link"><button class="buyer-login-button">Login Instead</button></a>
             </div>
             </div>
           </form>
