placed html markup into new login.handlebars, homepage.handlebars, buyer-signup.handlebars, artist-signup.handlebars and new css styles added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Art Garage App</title>
+    <title>Art Garage</title>
     <link rel="stylesheet" href="../../style.css" />
     <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico">
   </head>
