--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,7 @@
 }
 
 html {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 body {
@@ -239,7 +239,7 @@ button:hover {
 /* END -- HOMEPAGE -- WELCOME COLUMN */
 
 
-/* =======START -- DASHBOARD STYLES========= */
+/* ==== START -- DASHBOARD STYLES ====== */
 .dashboard-container {
   width: 80%;
   margin: auto;
@@ -267,7 +267,7 @@ button:hover {
 .dashboard-text {
   font-size: 18px;
   line-height: 25px;
-  color: var(--blue);
+  color: var(--med-gray);
 }
 
 .view-profile-dashboard {
@@ -277,7 +277,7 @@ button:hover {
 
 
 /* ======== START -- SIGNUP STYLES ========= */
-.signup-container {
+.signup-container, .login-container {
   margin: auto;
   width: 80%;
   padding-top: 40px;
@@ -322,14 +322,13 @@ input {
   border-radius: 4px;
 }
 
-.buyer-signup-form, .artist-signup-form {
+.buyer-signup-form, .artist-signup-form, .login-form {
   margin: auto;
-  /* width: 100%; */
   padding: 35px;
   max-width: 800px;
 }
 
-.buyer-signup-title, .artist-signup-title {
+.buyer-signup-title, .artist-signup-title, .login-title {
   text-align: center;
   font-weight: 400;
   font-size: 42px;
@@ -339,7 +338,7 @@ input {
   color: var(--drk-gray);
 }
 
-.buyer-signup-text, .artist-signup-text {
+.buyer-signup-text, .artist-signup-text, .login-text {
   text-align: center;
   font-size: 17px;
   line-height: 25px;
@@ -380,6 +379,17 @@ input {
 
 .buyer-signup-button:hover {
   opacity: 70%;
+}
+
+.login-button {
+  background-color: white;
+  border: 3px solid var(--green);
+  color: var(--green);
+}
+
+.login-button:hover {
+  background-color: var(--green);
+  color: white;
 }
 
 
