--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,19 @@
-;
+ <div class="login-container">
+          <form class="login-form">
+            <h1 class="login-title">Welcome Back!</h1>
+            <p class="login-text">We're glad you made it back! Please login below.</p>
+            <div class="form-container">
+            <div>
+              <label for="username-login">Username</label>
+              <input type="text" id="username-login" />
+            </div>
+            <div>
+              <label for="password-login">Password</label>
+              <input type="password" id="password-login" />
+            </div>
+            <div class="signup-or-login-container">
+              <a href="dashboard" class="login-link"><button class="login-button">Login Now</button></a>
+            </div>
+            </div>
+          </form>
+      </div>
