--- a/views/artist-update-page.handlebars
+++ b/views/artist-update-page.handlebars
@@ -1,7 +1,7 @@
       <div class="artist-update-profile-container">
         <form action="/profile" enctype="multipart/form-data" method="post" class="artist-update-form">
             <h1 class="artist-update-title">Welcome to the Update Profile Page!</h1>
-            <p class="artist-update-text">Please fill out all of the required information in order update your profile.</p>
+            <p class="artist-update-text">Please fill out all of the required information in order to update your profile.</p>
             <div class="form-container">
             <div>
               <label for="artist-name">Your Name</label>
