revised html and css -- added code for image upload

--- a/views/artist-profile-page.handlebars
+++ b/views/artist-profile-page.handlebars
@@ -1,4 +1,4 @@
-     <div class="artist-profile-container">
+<div class="artist-profile-container">
         <div class="profile-container">
 
           <h1 class="artist-name" id="artist-name">Jonathan Franklin</h1>
@@ -29,12 +29,13 @@
               </p>
             <div class="artwork-container">
               <img src="../../images/painting-sample.jpg" alt="Oil Painting">
-              <a href="/login" class="update-link"><button class="update-profile-button">Update My Profile</button></a>
+              <a href="/login" class="update-link"><button class="update-profile-button" id="update-from-profile">Update My Profile</button></a>
             </div>
         </div>
         </div>
-        <div class="comments-heading-container">
+        <div class="comments-heading-container" id="leave-comment">
         <h2 class="comments-heading" id="comments-title">Comments:</h2>
+        <a href="/login" class="leave-comment-link"><button class="leave-comment-button">Leave Comment</button></a>
         </div>
 
         <div class="profile-comments-container">
@@ -45,4 +46,3 @@
             </p>
           </div>
         </div>
-      
