revised html and css -- added code for image upload

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art Garage</title>
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico">
   </head>
   <body>
@@ -30,7 +30,7 @@
 
       {{!-- MAIN CONTENT START --}}
       <main>
-        {{{body}}}
+        {{{ body }}}
       </main>
       </div>
       {{!-- MAIN CONTENT END --}}
